// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TaskStatusTag > renders task status tag {"status":"AWAITING_DECISION","className":"bg-info-light"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag bg-info-light"
    data-testid="task-list-task-tag"
  >
    Awaiting decision
  </span>
</DocumentFragment>
`;

exports[`TaskStatusTag > renders task status tag {"status":"CANNOT_START_YET","className":"border-2px text-base"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag border-2px text-base"
    data-testid="task-list-task-tag"
  >
    Cannot start yet
  </span>
</DocumentFragment>
`;

exports[`TaskStatusTag > renders task status tag {"status":"CANT_START","className":"border-2px text-base"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag border-2px text-base"
    data-testid="task-list-task-tag"
  >
    Cannot start yet
  </span>
</DocumentFragment>
`;

exports[`TaskStatusTag > renders task status tag {"status":"COMPLETED","className":"bg-success-dark text-white"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag bg-success-dark text-white"
    data-testid="task-list-task-tag"
  >
    Completed
  </span>
</DocumentFragment>
`;

exports[`TaskStatusTag > renders task status tag {"status":"DONE","className":"bg-success-dark text-white"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag bg-success-dark text-white"
    data-testid="task-list-task-tag"
  >
    Completed
  </span>
</DocumentFragment>
`;

exports[`TaskStatusTag > renders task status tag {"status":"EDITS_REQUESTED","className":"bg-warning"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag bg-warning"
    data-testid="task-list-task-tag"
  >
    Edits requested
  </span>
</DocumentFragment>
`;

exports[`TaskStatusTag > renders task status tag {"status":"IN_PROGRESS","className":"bg-warning"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag bg-warning"
    data-testid="task-list-task-tag"
  >
    In progress
  </span>
</DocumentFragment>
`;

exports[`TaskStatusTag > renders task status tag {"status":"IN_REVIEW","className":"bg-info-light"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag bg-info-light"
    data-testid="task-list-task-tag"
  >
    In review
  </span>
</DocumentFragment>
`;

exports[`TaskStatusTag > renders task status tag {"status":"NOT_NEEDED","className":"border-2px text-base"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag border-2px text-base"
    data-testid="task-list-task-tag"
  >
    Not needed
  </span>
</DocumentFragment>
`;

exports[`TaskStatusTag > renders task status tag {"status":"READY","className":"bg-info-light"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag bg-info-light"
    data-testid="task-list-task-tag"
  >
    Ready to start
  </span>
</DocumentFragment>
`;

exports[`TaskStatusTag > renders task status tag {"status":"READY_FOR_REVIEW","className":"bg-info-light"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag bg-info-light"
    data-testid="task-list-task-tag"
  >
    Ready for review
  </span>
</DocumentFragment>
`;

exports[`TaskStatusTag > renders task status tag {"status":"READY_TO_SCHEDULE","className":"bg-info-light"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag bg-info-light"
    data-testid="task-list-task-tag"
  >
    Ready to schedule
  </span>
</DocumentFragment>
`;

exports[`TaskStatusTag > renders task status tag {"status":"READY_TO_START","className":"bg-info-light"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag bg-info-light"
    data-testid="task-list-task-tag"
  >
    Ready to start
  </span>
</DocumentFragment>
`;

exports[`TaskStatusTag > renders task status tag {"status":"SCHEDULED","className":"bg-info-light"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag bg-info-light"
    data-testid="task-list-task-tag"
  >
    Scheduled
  </span>
</DocumentFragment>
`;

exports[`TaskStatusTag > renders task status tag {"status":"SUBMITTED","className":"bg-info-light"} 1`] = `
<DocumentFragment>
  <span
    class="easi-tag easi-task-status-tag bg-info-light"
    data-testid="task-list-task-tag"
  >
    In review
  </span>
</DocumentFragment>
`;
